# site

./: .demo.env  .gitignore  Procfile  aboutus.html  add-to-gallery.html  certificate.html  contactus.html  cssfile.css  foundernote.html  index.html  login.html  pyproject.toml  requirements.txt  work.html
mainpages/: admin.py  models.py  urls.py  views.py
mainpages/migrations/: 0001_initial.py
ngo/: settings.py  urls.py
static/: cssfile.css
static/font/viyona/: LICENSE-Please Read.txt
templates/: base.html
templates/includes/: footer.html  navbar.html  scripts.html  stylesheets.html
templates/mainpages/: aboutus.html  admin.html  certificate.html  contactus.html  foundernote.html  home.html  login.html  save.html  work.html
templates/utils/: home_owl_caro.html
