[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"
environs = {extras = ["django"], version = "^9.5.0"}
whitenoise = "^6.1.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
django-jazzmin = "^2.5.0"
dj-database-url = "^0.5.0"
cloudinary = "^1.29.0"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
